# repo-upgrade

./: .env.example  .gitignore  README.md  graphview.ipynb  pyproject.toml
src/: models.py  tools.py
src/crewai/: agents.py  main.py  tasks.py
src/crewai_hierarchical/: agents.py  main.py  tasks.py
src/crewai_sequential/: agents.py  main.py  tasks.py
src/langgraph/: agents.py  main.py
src/langgraph_ops/: main.py
tests/: test_changelog_scrapping.py
